namespace DominoGameInterface;

interface IBoard
{
    List<IDominoTile> DominoTiles { get; set; }
}